# epam_python_task

./: .gitignore  README.md
.aws/: task-definition.json
.github/workflows/: blank.yml  build_and_push_registry.yaml  create_sonar_badges.yaml  deploy_in_aws.yml  execute_pytests.yml  push_to_docker_hub.yaml  sonarqube.yml
kata1_dictionary/: Dockerfile  README.md  kata1_dictionary.py  pyproject.toml  setup.cfg  test_kata1.py
kata1_dictionary/src/kata1/: kata1_dictionary.py
kata1_dictionary/tests/: test_kata1.py
kata2_tax/: LICENSE.txt  README.md  kata2_tax.py  pyproject.toml  setup.cfg  test_kata2.py
kata2_tax/tests/: conftest.py  test_kata2.py
kata3_concatenate/: README.md  kata3_concatenate.py  pyproject.toml  setup.cfg  test_kata3.py
kata3_concatenate/tests/: test_kata3.py
repo_images/sonarqube_badges/: .last_update  README.md
