[metadata]
name = kata2_tax
version = 1.0.0
author = Eduardo Martínez Piña
author_email = this_email_does_not_exists@outlook.com
description = A Python program that calculates total + tax of a list of items.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/ewardq/epam_python_task
project_urls =
    Bug Tracker = https://github.com/ewardq/epam_python_task/-/issues
    repository = https://github.com/ewardq/epam_python_task
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src